force-app/main/default/objects/Itinerary__c/Itinerary__c.object-meta.xml
<CustomObject>
    <label>Itinerary</label>
    <nameField>
        <displayFormat>ITN-{0000}</displayFormat>
        <label>Itinerary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itineraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>