force-app/main/default/objects/Itinerary__c/fields/Image_ID__c.field-meta.xml
<CustomField>
    <fullName>Image_ID__c</fullName>
    <description>ID of the Image</description>
    <label>Image ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>