force-app/main/default/objects/Itinerary__c/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <description>Link of Image</description>
    <label>Image Link</label>
    <type>Url</type>
</CustomField>