force-app/main/default/objects/Itinerary__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <description>Activity Interest of the customer</description>
    <label>Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>