force-app/main/default/objects/Itinerary__c/fields/Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Price__c</fullName>
    <description>Minimun Budget of the Customer.</description>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>